# pi-eink-dashboard

./: .gitignore  README.md  install.sh  pi-eink-dashboard.service  pyproject.toml  uninstall.sh
src/pi_eink_dashboard/: composer.py  display.py  dither.py  input.py  main.py  photos.py
src/pi_eink_dashboard/driver/: epd2in7b.py  epdconfig.py
src/pi_eink_dashboard/screens/: art.py  base.py  dashboard.py  health.py  identity.py  network.py  photo.py  test_pattern.py
